--- a/01-Intro/taxianalysis.ipynb
+++ b/01-Intro/taxianalysis.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python 3.10.13\n"
+      "Python 3.11.7\n"
      ]
     }
    ],
@@ -49,7 +49,7 @@
     "from sklearn.linear_model import Lasso\n",
     "from sklearn.linear_model import Ridge\n",
     "\n",
-    "from sklearn.metrics import root_mean_squared_error"
+    "from sklearn.metrics import mean_squared_error"
    ]
   },
   {
@@ -58,18 +58,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = pd.read_parquet(\"data/homework_1/yellow_tripdata_2023-01.parquet\")\n",
-    "df2 = pd.read_parquet(\"data/homework_1/yellow_tripdata_2023-01.parquet\")\n"
+    "df1 = pd.read_parquet(\"https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2023-01.parquet\")\n",
+    "df2 = pd.read_parquet(\"https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2023-02.parquet\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df = pd.concat([df1, df2])"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -86,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +96,7 @@
     }
    ],
    "source": [
-    "print(\"There are a total of\", len(df.columns),\"columns.\")"
+    "print(\"There are a total of\", len(df1.columns),\"columns.\")"
    ]
   },
   {
@@ -123,59 +121,16 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 6133532 entries, 0 to 3066765\n",
-      "Data columns (total 19 columns):\n",
-      " #   Column                 Dtype         \n",
-      "---  ------                 -----         \n",
-      " 0   VendorID               int64         \n",
-      " 1   tpep_pickup_datetime   datetime64[us]\n",
-      " 2   tpep_dropoff_datetime  datetime64[us]\n",
-      " 3   passenger_count        float64       \n",
-      " 4   trip_distance          float64       \n",
-      " 5   RatecodeID             float64       \n",
-      " 6   store_and_fwd_flag     object        \n",
-      " 7   PULocationID           int64         \n",
-      " 8   DOLocationID           int64         \n",
-      " 9   payment_type           int64         \n",
-      " 10  fare_amount            float64       \n",
-      " 11  extra                  float64       \n",
-      " 12  mta_tax                float64       \n",
-      " 13  tip_amount             float64       \n",
-      " 14  tolls_amount           float64       \n",
-      " 15  improvement_surcharge  float64       \n",
-      " 16  total_amount           float64       \n",
-      " 17  congestion_surcharge   float64       \n",
-      " 18  airport_fee            float64       \n",
-      "dtypes: datetime64[us](2), float64(12), int64(4), object(1)\n",
-      "memory usage: 935.9+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.info(\n",
-    ")"
+    "df1[\"duration\"] = df1[\"tpep_dropoff_datetime\"] - df1['tpep_pickup_datetime']\n",
+    "df1.duration = df1.duration.apply(lambda td: td.total_seconds() / 60)\n",
+    "df1['PUMonth'] = df1['tpep_pickup_datetime'].dt.month \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[\"duration\"] = df[\"tpep_dropoff_datetime\"] - df['tpep_pickup_datetime']\n",
-    "df.duration = df.duration.apply(lambda td: td.total_seconds() / 60)\n",
-    "df['PUMonth'] = df['tpep_pickup_datetime'].dt.month \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -387,18 +342,18 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df1.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -410,9 +365,9 @@
     }
    ],
    "source": [
-    "df_jan = df[df.PUMonth==1]\n",
+    "df1 = df1[df1.PUMonth==1]\n",
     "\n",
-    "dur_std = df_jan['duration'].std() \n",
+    "dur_std = df1['duration'].std() \n",
     "\n",
     "print(\"The Standard Deviation of Trip Duration is\", round(dur_std,2) )"
    ]
@@ -430,11 +385,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df3 = df[(df.duration >= 1) & (df.duration <= 60)]"
+    "df1_filter = df1[(df1.duration >= 1) & (df1.duration <= 60)]"
    ]
   },
   {
@@ -446,12 +401,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The original dataset was 6133532 rows, and the newer dataset was 6018346 rows. So we are left with 98.0 percent of the original dataset.\n"
+      "The original dataset was 3066718 rows, and the newer dataset was 3009136 rows. So we are left with 98.0 percent of the original dataset.\n"
      ]
     }
    ],
    "source": [
-    "print(\"The original dataset was\",len(df),\"rows, and the newer dataset was\", len(df3),\"rows. So we are left with\",round(len(df3)/len(df),2)*100 ,\"percent of the original dataset.\")"
+    "print(\"The original dataset was\",len(df1),\"rows, and the newer dataset was\", len(df1_filter),\"rows. So we are left with\",round(len(df1_filter)/len(df1),2)*100 ,\"percent of the original dataset.\")"
    ]
   },
   {
@@ -484,21 +439,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1466/1398457425.py:4: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_4992/2605247708.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df4[[\"PULocationID\",\"DOLocationID\"]] = df4[[\"PULocationID\",\"DOLocationID\"]].astype(str)\n"
+      "  df1_filter[[\"PULocationID\",\"DOLocationID\"]] = df1_filter[[\"PULocationID\",\"DOLocationID\"]].astype(str)\n"
      ]
     }
    ],
    "source": [
     "# Convert columns to 'category' if they have a limited number of unique values\n",
-    "\n",
-    "df4 = df_jan\n",
-    "df4[[\"PULocationID\",\"DOLocationID\"]] = df4[[\"PULocationID\",\"DOLocationID\"]].astype(str)\n",
-    "df4= df4[(df4.duration >= 1) & (df4.duration <= 60)]\n"
+    "df1_filter[[\"PULocationID\",\"DOLocationID\"]] = df1_filter[[\"PULocationID\",\"DOLocationID\"]].astype(str)\n",
+    "\n"
    ]
   },
   {
@@ -508,7 +461,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "q4_one_hot = df4[[\"PULocationID\", \"DOLocationID\"]]\n",
+    "q4_one_hot = df1_filter[[\"PULocationID\", \"DOLocationID\"]]\n",
     "q4_one_hot = q4_one_hot.to_dict(orient = \"records\")\n",
     "v = DictVectorizer()\n"
    ]
@@ -530,7 +483,7 @@
     {
      "data": {
       "text/plain": [
-       "(6018272, 515)"
+       "(3009136, 515)"
       ]
      },
      "execution_count": 17,
@@ -554,11 +507,7 @@
     "    Calculate the RMSE of the model on the training data\n",
     "\n",
     "What's the RMSE on train?\n",
-    "\n",
-    "    6.99\n",
-    "    11.99\n",
-    "    16.99\n",
-    "    21.99\n"
+    "\n"
    ]
   },
   {
@@ -568,7 +517,7 @@
    "outputs": [],
    "source": [
     "X_train = X\n",
-    "y_train = df4['duration'].values\n",
+    "y_train = df1_filter['duration'].values\n",
     "\n",
     "lr = LinearRegression()\n",
     "lr.fit(X_train, y_train)\n",
@@ -583,7 +532,7 @@
     {
      "data": {
       "text/plain": [
-       "7.649229610702842"
+       "7.649229493769389"
       ]
      },
      "execution_count": 19,
@@ -592,12 +541,12 @@
     }
    ],
    "source": [
-    "root_mean_squared_error(y_train, y_pred)"
+    "mean_squared_error(y_train, y_pred, squared=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,6 +562,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Put the functions to read in the data all together. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Q6. Evaluating the model\n",
     "\n",
     "Now let's apply this model to the validation dataset (February 2023).\n",
@@ -622,14 +599,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1466/3305930840.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_3967/1522146504.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -639,14 +623,16 @@
     }
    ],
    "source": [
-    "df5 = df[df.PUMonth==2]\n",
+    "df2 = df2[df2.PUMonth==2]\n",
+    "\n",
+    "\n",
     "df5[[\"PULocationID\",\"DOLocationID\"]] = df5[[\"PULocationID\",\"DOLocationID\"]].astype(str)\n",
     "#df5= df5[(df5.duration >= 1) & (df5.duration <= 60)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +796,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
