--- a/01-Intro/taxianalysis.ipynb
+++ b/01-Intro/taxianalysis.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -432,14 +432,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_4992/2605247708.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_2130/2605247708.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
        "(3009136, 515)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,20 +545,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#plt.figure(figsize=(10, 6))\n",
-    "#sns.histplot(y_train, color='blue', kde=True, stat='density', label='Actual', alpha=0.6)\n",
-    "#sns.histplot(y_pred, color='red', kde=True, stat='density', label='Predicted', alpha=0.6)\n",
-    "#plt.legend()\n",
-    "#plt.title('Overlayed Histogram of Actual and Predicted Values')\n",
-    "#plt.show()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -567,24 +553,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def taxi_model_prep(link, month, low_bnd,upp_bnd):\n",
+    "     df = pd.read_parquet(link)\n",
+    "     # Start prep of duration\n",
+    "     df[\"duration\"] = df[\"tpep_dropoff_datetime\"] - df['tpep_pickup_datetime']\n",
+    "     df.duration = df.duration.apply(lambda td: td.total_seconds() / 60)\n",
+    "     df['PUMonth'] = df['tpep_pickup_datetime'].dt.month \n",
+    "\n",
+    "     # Filter out the month and durations\n",
+    "     df = df[df.PUMonth==month]\n",
+    "     df_filter = df[(df.duration >= low_bnd) & (df.duration <= upp_bnd)]\n",
+    "     # Convert columns to 'category' if they have a limited number of unique values\n",
+    "     df_filter[[\"PULocationID\",\"DOLocationID\"]] = df_filter[[\"PULocationID\",\"DOLocationID\"]].astype(str)\n",
+    "\n",
+    "     return df_filter"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_2130/2490145179.py:12: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_filter[[\"PULocationID\",\"DOLocationID\"]] = df_filter[[\"PULocationID\",\"DOLocationID\"]].astype(str)\n"
+     ]
+    }
+   ],
+   "source": [
+    "q6_df = taxi_model_prep(\"https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2023-02.parquet\",\n",
+    "                2, 1,60)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "q6_one_hot = q6_df[[\"PULocationID\", \"DOLocationID\"]]\n",
+    "q6_one_hot = q6_one_hot.to_dict(orient = \"records\")\n",
+    "v = DictVectorizer()\n",
+    "X = v.fit_transform(q6_one_hot)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -599,77 +621,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_3967/1522146504.py:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df5[[\"PULocationID\",\"DOLocationID\"]] = df5[[\"PULocationID\",\"DOLocationID\"]].astype(str)\n"
-     ]
-    }
-   ],
-   "source": [
-    "df2 = df2[df2.PUMonth==2]\n",
-    "\n",
-    "\n",
-    "df5[[\"PULocationID\",\"DOLocationID\"]] = df5[[\"PULocationID\",\"DOLocationID\"]].astype(str)\n",
-    "#df5= df5[(df5.duration >= 1) & (df5.duration <= 60)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "q6_one_hot = df5[[\"PULocationID\", \"DOLocationID\"]]\n",
-    "q6_one_hot = q6_one_hot.to_dict(orient = \"records\")\n",
-    "v = DictVectorizer()\n",
-    "X = v.fit_transform(q6_one_hot)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(20,)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df5['duration'].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train = X\n",
-    "y_train = df5['duration'].values\n",
+    "y_train = q6_df['duration'].values\n",
     "\n",
     "lr = LinearRegression()\n",
     "lr.fit(X_train, y_train)\n",
@@ -678,106 +635,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(20,)"
+       "7.7789698381393215"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_train.shape"
+    "mean_squared_error(y_train, y_pred, squared=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.998835493907516e-15"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "root_mean_squared_error(y_train, y_pred)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
