--- a/01-Intro/taxianalysis.ipynb
+++ b/01-Intro/taxianalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,20 +54,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "df1 = pd.read_parquet(\"https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2023-01.parquet\")\n",
-    "df2 = pd.read_parquet(\"https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2023-02.parquet\")\n"
+    "df2 = pd.read_parquet(\"https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2023-02.parquet\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -84,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +335,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -432,14 +425,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2130/2605247708.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_2270/2605247708.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -456,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +479,7 @@
        "(3009136, 515)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,12 +546,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def taxi_model_prep(link, month, low_bnd,upp_bnd):\n",
-    "     df = pd.read_parquet(link)\n",
+    "def taxi_data_prep(filename, month, low_bnd,upp_bnd):\n",
+    "     df = pd.read_parquet(filename)\n",
     "     # Start prep of duration\n",
     "     df[\"duration\"] = df[\"tpep_dropoff_datetime\"] - df['tpep_pickup_datetime']\n",
     "     df.duration = df.duration.apply(lambda td: td.total_seconds() / 60)\n",
@@ -575,14 +568,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2130/2490145179.py:12: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_2270/3872572736.py:12: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_filter[[\"PULocationID\",\"DOLocationID\"]] = df_filter[[\"PULocationID\",\"DOLocationID\"]].astype(str)\n",
+      "/tmp/ipykernel_2270/3872572736.py:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -592,20 +591,10 @@
     }
    ],
    "source": [
-    "q6_df = taxi_model_prep(\"https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2023-02.parquet\",\n",
+    "df_train = taxi_data_prep(\"https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2023-01.parquet\",\n",
+    "                1, 1,60)\n",
+    "df_val = taxi_data_prep(\"https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2023-02.parquet\",\n",
     "                2, 1,60)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "q6_one_hot = q6_df[[\"PULocationID\", \"DOLocationID\"]]\n",
-    "q6_one_hot = q6_one_hot.to_dict(orient = \"records\")\n",
-    "v = DictVectorizer()\n",
-    "X = v.fit_transform(q6_one_hot)"
    ]
   },
   {
@@ -621,36 +610,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = X\n",
-    "y_train = q6_df['duration'].values\n",
+    "v = DictVectorizer()\n",
     "\n",
-    "lr = LinearRegression()\n",
-    "lr.fit(X_train, y_train)\n",
-    "y_pred = lr.predict(X_train)"
+    "# Create one hot encoding from df\n",
+    "categorical = [\"PULocationID\", \"DOLocationID\"]\n",
+    "train_dicts = df_train[categorical].to_dict(orient = \"records\")\n",
+    "val_dicts = df_val[categorical].to_dict(orient = \"records\")\n",
+    "\n",
+    "X_train = v.fit_transform(train_dicts)\n",
+    "X_val = v.transform(val_dicts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Statistical Model Prep\n",
+    "target = 'duration'\n",
+    "y_train = df_train[target].values\n",
+    "y_val = df_val[target].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7.7789698381393215"
+       "7.811828263013413"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mean_squared_error(y_train, y_pred, squared=False)"
+    "lr = LinearRegression()\n",
+    "lr.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = lr.predict(X_val)\n",
+    "\n",
+    "mean_squared_error(y_val, y_pred, squared=False)"
    ]
   }
  ],
