--- a/02-experiment-tracking/homework2.ipynb
+++ b/02-experiment-tracking/homework2.ipynb
@@ -10,17 +10,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "f099081d-d2a7-4116-8738-d1f16c904f2c",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024/05/30 15:12:47 INFO mlflow.tracking.fluent: Experiment with name 'nyc-taxi-experiment' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<Experiment: artifact_location='/workspaces/MLOpps24/02-experiment-tracking/mlruns/1', creation_time=1717003124647, experiment_id='1', last_update_time=1717003124647, lifecycle_stage='active', name='nyc-taxi-experiment', tags={}>"
+       "<Experiment: artifact_location='mlflow-artifacts:/1', creation_time=1717081967461, experiment_id='1', last_update_time=1717081967461, lifecycle_stage='active', name='nyc-taxi-experiment', tags={}>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,7 +35,7 @@
    "source": [
     "import mlflow\n",
     "\n",
-    "mlflow.set_tracking_uri(\"sqlite:///mlflow.db\")\n",
+    "mlflow.set_tracking_uri(\"http://127.0.0.1:5001\")\n",
     "mlflow.set_experiment(\"nyc-taxi-experiment\")"
    ]
   },
@@ -268,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
